--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "type": "module",
+  "jest": {
+    "testEnvironment": "node"
+  },
   "scripts": {
     "start": "nodemon ./src/index.js",
-    "test": "mocha 'src/tests/**/*.test.js' --experimental-modules"
+    "test": "jest --config jest.config.js"
   },
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.750.0",
@@ -11,6 +14,7 @@
     "aws-sdk": "^2.1692.0",
     "bcryptjs": "^3.0.2",
     "body-parser": "^1.20.3",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "expect": "^29.7.0",
     "express": "^4.21.2",
@@ -21,6 +25,7 @@
     "chai": "^5.2.0",
     "mocha": "^11.1.0",
     "nodemon": "^3.1.9",
+    "proxyquire": "^2.1.3",
     "sinon": "^19.0.2"
   }
 }
