--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   },
   "scripts": {
     "start": "nodemon ./src/index.js",
-    "test": "jest --config jest.config.js"
+    "test": "mocha 'src/tests/**/*.test.js'"
   },
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.750.0",
@@ -26,6 +26,7 @@
     "mocha": "^11.1.0",
     "nodemon": "^3.1.9",
     "proxyquire": "^2.1.3",
-    "sinon": "^19.0.2"
+    "sinon": "^19.0.2",
+    "ts-node": "^10.9.2"
   }
 }
